[package]
name = "avocado-conn"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "avocado-conn"
path = "src/main.rs"

[features]
default = ["id-dmi", "id-devicetree", "id-rpi", "id-imx", "id-nic-mac"]
id-dmi = []
id-devicetree = []
id-rpi = []
id-imx = []
id-nic-mac = []

[dependencies]
tokio = { version = "1", features = ["rt", "macros", "time", "sync", "net", "io-util", "signal"] }
rumqttc = { version = "0.24", features = ["use-rustls"] }
webpki-roots = "1"
ureq = { version = "3", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
x25519-dalek = { version = "2", features = ["static_secrets"] }
rand = "0.8"
base64 = "0.22"

[profile.release]
strip = true
lto = true
codegen-units = 1
